# advent2020

./: .gitignore  README  WORKSPACE.bazel  package.json
Day16/: Day162  main.go
day1/: BUILD.bazel  main.ts
day10/: BUILD.bazel  Main.hs  main.go  main.ml
day11/: BUILD.bazel  Main.hs  main.go  main.ml
day12/: BUILD.bazel  Main.hs  main.go  main.ml  main.ts
day13/: BUILD.bazel  Main.hs  main.go
day14/: BUILD.bazel  Main.hs  main.go
day15/: BUILD.bazel  Main.hs  main.go
day16/: BUILD  Main.hs
day17/: Main.hs
day18/: Main.hs
day19/: Main.hs
day2/: BUILD.bazel  main.ts
day20/: Main.hs
day21/: BUILD  Main.hs  main.ts
day22/: BUILD  Cargo.toml  Main.hs  main.go  main.rs
day23/: Main.hs
day24/: Main.hs
day25/: Main.hs
day3/: BUILD.bazel  main.ts
day4/: BUILD.bazel  main.ts
day5/: BUILD.bazel  Cargo.toml  main.rs
day6/: BUILD.bazel  Cargo.toml  main.rs
day7/: BUILD.bazel  Main.hs  main.ml  main.ts
day8/: BUILD.bazel  Main.hs  main.ml  main.ts
day9/: BUILD.bazel  main.ts
