package(default_visibility = ["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

ts_project(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "downlevelIteration": True,
            "target": "es5",
        },
    },
    deps = [
        "@npm//@types/node"
    ],
)

nodejs_binary(
    name = "day12",
    data = [
        ":lib",
        "input.txt",
    ],
    entry_point = ":main.ts",
)

go_binary(
    name = "day12go",
    data = ["input.txt"],
    srcs = ["main.go"],
)
